Fixed error with date/Adjusted elements on small screens

--- a/src/App.css
+++ b/src/App.css
@@ -33,7 +33,7 @@
 	flex-direction: column;
 	gap: 0.2rem;
 	padding: 0;
-	margin: 0.1rem;
+	margin: 0.5rem 0.1rem;
 }
 
 .sort-filter {
@@ -42,6 +42,7 @@
 	gap: 1rem;
 	padding: 0;
 	margin: 0.3rem 0.7rem;
+	flex-wrap: wrap;
 	/* margin-bottom: 0.3rem; */
 }
 
@@ -51,6 +52,7 @@
 	flex-direction: row;
 	gap: 0.5rem;
 	align-items: center;
+	flex-wrap: wrap;
 }
 
 .sort,
@@ -111,48 +113,8 @@
 @media only screen and (max-width: 320px) {
 	.sort-filter {
 		flex-direction: column;
-		gap: 0.3rem;
+		gap: 0.5rem;
 		margin: auto;
-	}
-
-	.sort,
-	.filter {
-		font-size: 0.45rem;
-	}
-
-	.sort-flair,
-	.filter-flair {
-		padding: 0 0.3rem;
-		border-radius: 0.5rem;
-		font-size: 0.45rem;
-	}
-}
-
-@media only screen and (min-width: 321px) and (max-width: 400px) {
-	.sort-filter {
-		flex-direction: column;
-		gap: 0.5rem;
-		margin: auto 0.5rem;
-	}
-
-	.sort,
-	.filter {
-		font-size: 0.6rem;
-	}
-
-	.sort-flair,
-	.filter-flair {
-		padding: 0 0.3rem;
-		border-radius: 0.5rem;
-		font-size: 0.475rem;
-	}
-}
-
-@media only screen and (min-width: 401px) and (max-width: 600px) {
-	.sort-filter {
-		flex-direction: column;
-		gap: 0.5rem;
-		margin: auto 0.5rem;
 	}
 
 	.sort,
@@ -164,7 +126,65 @@
 	.filter-flair {
 		padding: 0 0.3rem;
 		border-radius: 0.5rem;
-		font-size: 0.6rem;
+		font-size: 0.7rem;
+	}
+
+	.fab,
+	.fab:hover {
+		padding: 0.7rem 0.8rem;
+	}
+
+	.fab-container {
+		margin: 1rem;
+	}
+}
+
+@media only screen and (min-width: 321px) and (max-width: 400px) {
+	.sort-filter {
+		flex-direction: column;
+		gap: 0.7rem;
+		margin: auto 0.5rem;
+	}
+
+	.sort,
+	.filter {
+		font-size: 0.8rem;
+	}
+
+	.sort-flair,
+	.filter-flair {
+		padding: 0 0.3rem;
+		border-radius: 0.5rem;
+		font-size: 0.8rem;
+	}
+
+	.fab,
+	.fab:hover {
+		padding: 0.8rem 0.9rem;
+	}
+
+	.fab-container {
+		margin: 1.2rem;
+	}
+}
+
+@media only screen and (min-width: 401px) and (max-width: 600px) {
+	.sort-filter {
+		flex-direction: column;
+		gap: 0.75rem;
+		margin: auto 0.5rem;
+	}
+
+	.sort,
+	.filter {
+		font-size: 0.8rem;
+	}
+
+	.sort-flair,
+	.filter-flair {
+		padding: 0 0.3rem;
+		border-radius: 0.5rem;
+		font-size: 0.8rem;
 	}
 }
 
@@ -172,7 +192,7 @@
 	.sort-filter {
 		flex-direction: column;
 		gap: 1rem;
-		margin: auto 0.5rem;
+		margin: auto 1rem;
 		margin-bottom: 0.7rem;
 	}
 }
