--- a/src/components/PostCondensed/PostCondensed.css
+++ b/src/components/PostCondensed/PostCondensed.css
@@ -56,11 +56,11 @@
 	}
 
 	.upvotes {
-		font-size: 0.5rem;
+		font-size: 0.7rem;
 	}
 
 	.flair {
-		font-size: 0.6rem;
+		font-size: 0.7rem;
 		margin-left: auto;
 		padding: 0.1rem 0.5rem;
 	}
@@ -79,11 +79,11 @@
 	}
 
 	.upvotes {
-		font-size: 0.7rem;
+		font-size: 0.9rem;
 	}
 
 	.flair {
-		font-size: 0.8rem;
+		font-size: 0.9rem;
 	}
 }
 
