--- a/src/pages/Search/Search.css
+++ b/src/pages/Search/Search.css
@@ -26,36 +26,36 @@
 
 @media only screen and (max-width: 320px) {
 	.search-header {
-		font-size: 0.45rem;
-	}
-
-	.query {
-		padding: 0 0.3rem;
-		border-radius: 0.5rem;
-		font-size: 0.45rem;
-	}
-}
-
-@media only screen and (min-width: 321px) and (max-width: 400px) {
-	.search-header {
-		font-size: 0.6rem;
-	}
-
-	.query {
-		padding: 0 0.3rem;
-		border-radius: 0.5rem;
-		font-size: 0.475rem;
-	}
-}
-
-@media only screen and (min-width: 401px) and (max-width: 600px) {
-	.search-header {
 		font-size: 0.7rem;
 	}
 
 	.query {
 		padding: 0 0.3rem;
 		border-radius: 0.5rem;
-		font-size: 0.6rem;
+		font-size: 0.7rem;
+	}
+}
+
+@media only screen and (min-width: 321px) and (max-width: 400px) {
+	.search-header {
+		font-size: 0.8rem;
+	}
+
+	.query {
+		padding: 0 0.3rem;
+		border-radius: 0.5rem;
+		font-size: 0.8rem;
+	}
+}
+
+@media only screen and (min-width: 401px) and (max-width: 600px) {
+	.search-header {
+		font-size: 0.8rem;
+	}
+
+	.query {
+		padding: 0 0.3rem;
+		border-radius: 0.5rem;
+		font-size: 0.8rem;
 	}
 }
